--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ scipy>=1.7.0
 # Machine learning for anomaly detection
 scikit-learn>=1.0.0
 
-# Optional plotting / visualization (for dashboards or notebooks)
+# Optional plotting / visualisation (for dashboards or notebooks)
 matplotlib>=3.4.0
 seaborn>=0.11.0
 plotly>=5.0.0
